fix(nav): Shift expand trigger on narrow screens

--- a/_sass/expandable-nav.scss
+++ b/_sass/expandable-nav.scss
@@ -92,12 +92,17 @@ body.with-expandable-nav {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    left: 0;
-    top: 3.3em;
     height: 1.8em;
     width: $stripeWidth;
     display: flex;
+
+    position: absolute;
+    left: 0;
+    top: .5em;
+
+    @media screen and (min-width: $bigscreenBreakpoint) {
+      top: 3.3em;
+    }
 
     .fa-times { display: none; }
   }
